--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0"
   }
