--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "ts-node-dev --respawn src/server.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -36,7 +37,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "graphql": "^15.7.2",
+    "apollo-server": "^3.5.0",
+    "graphql": "^15.8.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -50,6 +52,8 @@
     "eslint": "^7.32.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   }
 }
