server serving data from .json

--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,17 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "server": "ts-node-dev --respawn index.ts"
+    "server": "ts-node-dev --watch schema.gql,data.json --respawn index.ts"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.4"
-  },
   "dependencies": {
     "apollo-server": "^3.5.0",
     "graphql": "^15.8.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.11.13",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.4"
   }
 }
