--- a/client/package.json
+++ b/client/package.json
@@ -52,9 +52,10 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.2",
     "@graphql-codegen/typescript-resolvers": "^2.4.2",
     "@types/prismjs": "^1.16.6",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.28.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "typescript": "^4.4.4"
