--- a/client/codegen.yml
+++ b/client/codegen.yml
@@ -10,6 +10,7 @@ generates:
       - 'typescript-resolvers'
     config:
       useIndexSignature: true
+      avoidOptionals: true
 hooks:
   afterOneFileWrite:
     - npx prettier --write
